<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:background="@drawable/lyt_order_item_background">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        style="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="20dp"
        android:adjustViewBounds="true"
        android:background="@drawable/custom_image_corner"
        android:contentDescription="@string/foodDescription"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:lines="1"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="91dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image">

        <ImageButton
            android:id="@+id/ib_remove"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/removeDescription"
            android:src="@drawable/circle_remove" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/count"
            android:layout_marginHorizontal="12dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/ib_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/addDescription"
            android:src="@drawable/circle_add" />

    </LinearLayout>

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:lines="1"
        android:text="@string/price"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:contentDescription="@string/deleteDescription"
        android:src="@drawable/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>