<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="1dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    tools:context=".presentation.fragments.cardscreen.cardsuccess.CardFragmentSuccess">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="158dp"
            android:layout_height="145dp"
            android:layout_gravity="center"
            android:layout_marginTop="193dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/successDescription"
                android:src="@drawable/ordering_success"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:text="@string/order_success"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ok"
            android:layout_width="239dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="73dp"
            android:backgroundTint="@color/primaryDark"
            android:elevation="0dp"
            android:focusable="true"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="14dp"
            app:rippleColor="@color/purple_200" />

    </LinearLayout>

</androidx.cardview.widget.CardView>