<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.fragments.dialoglogin.LoginDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center_vertical|end"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingEnd="70dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="282dp"
                android:layout_height="186dp"
                android:contentDescription="@string/tt_logo"
                android:src="@drawable/logo_x1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingTop="30dp"
                    android:text="@string/tamak"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    android:textStyle="normal"
                    android:typeface="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/time"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    android:textStyle="normal"
                    android:typeface="sans" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center_vertical|start"
            android:orientation="vertical"
            android:paddingStart="70dp"
            android:paddingEnd="50dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input_lyt"
                style="@style/MyTextInputLayout"
                android:layout_width="405dp"
                android:layout_height="66dp"
                android:layout_marginTop="75dp"
                android:hint="@string/phone"
                app:boxCornerRadiusBottomEnd="6dp"
                app:boxCornerRadiusBottomStart="6dp"
                app:boxCornerRadiusTopEnd="6dp"
                app:boxCornerRadiusTopStart="6dp"
                app:hintTextColor="@android:color/white"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_lyt"
                style="@style/MyTextInputLayout"
                android:layout_width="405dp"
                android:layout_height="66dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                app:hintTextColor="@android:color/white"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    style="@style/MyButtonStyle"
                    android:layout_width="405dp"
                    android:layout_height="63dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/singIn"
                    android:textColor="@color/btnText" />

                <ProgressBar
                    android:id="@+id/progress"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/login_button"
                    android:layout_alignEnd="@+id/login_button"
                    android:layout_alignBottom="@+id/login_button"
                    android:elevation="1dp"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/primaryDark"
                    android:layout_marginEnd="30dp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>