<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="1dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    tools:context=".presentation.fragments.cardscreen.carderror.CardFragmentError">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_gravity="center"
            android:text="@string/smth_wrong_try_again"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="73dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/errorDescription"
                android:src="@drawable/card_error"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/cl_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/red"
            android:elevation="0dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="14dp"
            app:rippleColor="@color/purple_200" />

    </LinearLayout>

</androidx.cardview.widget.CardView>