<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_product_item"
    android:layout_width="170dp"
    android:layout_height="236dp"
    android:layout_marginVertical="10dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ibAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/food_image"
            style="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            android:layout_width="170dp"
            android:layout_height="146dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/foodDescription"
            android:scaleType="centerCrop"
            android:background="@drawable/custom_image_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="63dp"
            android:layout_height="31dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/lyt_price_bg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/food_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:text="@string/two_thousand_txt"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Яйцо с ростфибом"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/food_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:text="@string/count_txt"
        android:textColor="@color/gray"
        android:textSize="18sp" />

</LinearLayout>